# discord_style_sft

./: .env.example  .gitignore  README.md  pyproject.toml
discord_sft/: __init__.py  ui.py
discord_sft/analysis/: __init__.py  fingerprint.py  heuristics.py  stylometry.py  tokstats.py
discord_sft/cli/: __init__.py  __main__.py  commands_data.py  commands_eval.py  commands_train.py  commands_ui.py  env.py  parser.py
discord_sft/data_prep/: __init__.py  curate.py  curate_sweep.py  ingest.py  normalize.py  sft.py
discord_sft/evals/: README.md  __init__.py  adapter_training_meta.py  baseline_prompt.py  benchmarks.py  compare.py  env_health.py  harness.py  judge.py  model.py  pairwise_style.py  paths.py  persona.py  qwen35_sampling.py  runner.py  storage.py  style_rank_checkpoint_replay.py  vllm_server.py
discord_sft/training/: README.md  __init__.py  callbacks.py  common.py  config.py  data.py  merge_peft.py  trainer.py
discord_sft/training/configs/: qwen35_a3b_full_r16.yaml  qwen35_a3b_style_late.yaml
discord_sft/training/lora_search/: README.md  __init__.py  gradient_probe.py  visualize_probe.py
discord_sft/ui/: __init__.py  _subprocess.py  app.py  common.py  pages_stats.py  persona_compare.py  workspace_status.py
discord_sft/ui/pages/: __init__.py  _baseline_prompt.py  analyze.py  browse.py  build_sft.py  curate.py  data.py  fingerprint.py  home.py  ingest.py  train.py
discord_sft/ui/pages/evals/: __init__.py  catalog.py  compare.py  paths.py  persona_browser.py  persona_render.py  persona_verdicts.py  run.py  run_annotations.py  style_rank.py  style_rank_elo_store.py  style_rank_groups.py  timeline.py
scripts/: analyze_lora_adapter.py  apply_lmms_openai_max_tokens_patch.sh  bootstrap_lmms_eval_env.py  download_nltk_for_ifeval.py  patch_lmms_openai_disable_thinking.py  patch_lmms_openai_max_new_tokens.py  setup_gh200_evals.sh  setup_gh200_training.sh
tests/: test_adapter_training_meta.py  test_baseline_prompt.py  test_config_merge_parity_loader.py  test_curate.py  test_curate_sweep.py  test_eval_training_config_resolve.py  test_evals_compare.py  test_evals_harness.py  test_evals_persona.py  test_evals_persona_openai.py  test_evals_storage.py  test_evals_vllm_server.py  test_heuristics.py  test_ingest.py  test_judge_openrouter.py  test_merge_peft.py  test_pairwise_style.py  test_patch_lmms_openai_disable_thinking.py  test_patch_lmms_openai_max_new_tokens.py  test_persona_compare.py  test_qwen35_sampling.py  test_run_annotations.py  test_sft.py  test_style_rank_checkpoint_replay.py  test_style_rank_elo_store.py  test_style_rank_groups.py  test_tokstats.py  test_training_chat_template.py  test_training_chat_template_validation.py  test_training_lora_search.py  test_ui_common.py  test_workspace_status.py
tests/fixtures/: lmms_eval_results_sample.json
